@@ -40,6 +40,7 @@ modules 3.3.0
 Modules 3.2.10
 	* Fix the module swap with the --delim option (Tyson Whitehead)
 	* Increased the "update" buffer (Leon Kos)
+	* Use the locale for sorting modulefiles by the avail command
 
 Modules 3.2.9
 Nov 24, 2011				R.K. Owen (rk@owen.sj.ca.us)
